# Event-System

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
SimpleEvents/src/: event_dispatcher.cpp  event_dispatcher.h  main.cpp
Source/: ExampleCode.h  Main.cpp
Source/Events/: Event.h  EventDispatcher.cpp  EventDispatcher.h  UtilMacros.h
TypeSafeDelegates/src/: delegate.h  main.cpp  multicast_delegate.h
